# dbt-test

./: README.md  Taskfile.yml  dbt_project.yml  pyproject.toml  source_data.py
macros/: has_aws_credentials.sql
models/: my_python_model.py  my_python_model.yml  raw_time_series.sql
models/staging/: __sources.yml  aws_s3.sql  incremental_copy.sql
snapshots/: time_series_data.yml
