[project]
name = "dbt-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9.11",
    "dagster-dbt>=0.25.11",
    "dagster-webserver>=1.9.11",
    "dbt-core>=1.9.1",
    "dbt-duckdb>=1.9.1",
    "dbt-metricflow>=0.8.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
]

[tool.dagster]
module_name = "definitions"
